增加json处理类，可以获得所有的json叶子结点并存数据库，构造结点映射进行报文转换